RESOLVED FIXED162652
PiP shows incorrect state of play button.
https://bugs.webkit.org/show_bug.cgi?id=162652
Summary PiP shows incorrect state of play button.
Jer Noble
Reported 2016-09-27 18:21:54 PDT
PiP shows incorrect state of play button.
Attachments
Patch (1.83 KB, patch)
2016-09-28 08:52 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2016-09-28 08:52:23 PDT
WebKit Commit Bot
Comment 2 2016-09-28 09:29:05 PDT
Comment on attachment 290086 [details] Patch Clearing flags on attachment: 290086 Committed r206520: <http://trac.webkit.org/changeset/206520>
WebKit Commit Bot
Comment 3 2016-09-28 09:29:08 PDT
All reviewed patches have been landed. Closing bug.
Jon Lee
Comment 4 2016-09-28 10:30:13 PDT
Note You need to log in before you can comment on or make changes to this bug.