PiP shows incorrect state of play button. https://bugs.webkit.org/show_bug.cgi?id=162652

Reviewed by Eric Carlson.

After getting a new WebPlaybackSessionModel, the first thing WebVideoFullscreenInterfaceMac
should do is query for it's playbackRate() and isPlaying() properties.

* platform/mac/WebVideoFullscreenInterfaceMac.mm:
(WebCore::WebVideoFullscreenInterfaceMac::WebVideoFullscreenInterfaceMac):


Canonical link: https://commits.webkit.org/180618@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206520 268f45cc-cd09-0410-ab3c-d52691b4dbfc