Source/WebCore/platform/mac/WebVideoFullscreenInterfaceMac.mm
@@ -352,7 +352,9 @@ WebVideoFullscreenInterfaceMac::WebVideoFullscreenInterfaceMac(WebPlaybackSessio
     : m_playbackSessionInterface(playbackSessionInterface)
 {
     ASSERT(m_playbackSessionInterface->webPlaybackSessionModel());
-    m_playbackSessionInterface->webPlaybackSessionModel()->addClient(*this);
+    auto model = m_playbackSessionInterface->webPlaybackSessionModel();
+    model->addClient(*this);
+    [videoFullscreenInterfaceObjC() updateIsPlaying:model->isPlaying() newPlaybackRate:model->playbackRate()];
 }
 
 WebVideoFullscreenInterfaceMac::~WebVideoFullscreenInterfaceMac()
